Support older version of Java
- most classes use Java 1.8, so we should support that by not
  using new Java 10+ features